[功能]优化 changelog. 预防链接因TCP静默断开导致链接已死则需要新建链接，否则系统会继续用死链接导致后续所有执行sql都CommunicationsException